# sheriffwebsites

./: .coverage  .dockerignore  .gitignore  Dockerfile  acr-build-file.yml  bookings.csv  notes.txt  noxfile.py  pyproject.toml  scrapy.cfg
sheriffwebsites/: exceptions.py  items.py  settings.py  utils.py  validators.py
sheriffwebsites/feedstorages/: azure_blob.py
sheriffwebsites/spiders/: bookings.py
tests/: __init__.py  test_feed_exporter_e2e.py  test_feed_exporter_integration.py  test_feed_storage.py  test_items.py  test_utils.py  test_validators.py
